--- a/.env
+++ b/.env
@@ -18,3 +18,7 @@
 APP_ENV=dev
 APP_SECRET=e390dc0275400f82d911c924c3a26b66
 ###< symfony/framework-bundle ###
+
+###> symfony/slack-notifier ###
+# SLACK_DSN=slack://TOKEN@default?channel=CHANNEL
+###< symfony/slack-notifier ###
